seasonssk.css
/* ... */
.conversion_reminder {
	display: flex;
	grid-column: 2;
	align-items: center;
	gap: 8px;
	flex-wrap: wrap;
}

.reminder {
	display: flex;
	align-items: center;
}

#convertFor1 .energy {
	margin: 0px 3px 0px 3px;
}

/*Player board on the left*/

.leftPlayerBoardWrapper {
	border: 2px solid #9d7e7e;
	border-radius: 74px;
	align-self: flex-start;
}

.leftPlayerBoard {
	display: inline-flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	padding: 5px;
	position: relative;
	gap: 3px;
}

.leftPlayerBoard .ssn-avatar {
	width: 92px;
	height: 92px;
	border: 2px solid;
	border-radius: 50px;
	border-color: #9d7e7e;
	/*position: absolute;
	top: 10px;*/
}

.bonus_actions_used {
	margin-bottom: 5px;
}

.bonus_actions_used div:first-child,
.bonus_actions_used div:last-child {
	margin-bottom: -4px;
}

.leftPlayerBoard .icon_cristal {
	position: relative;
	top: 0px;
	left: -17px;
}
.leftPlayerBoard .prestige {
	position: relative;
	top: 0px;
	right: -20px;
}

.leftPlayerBoard .stockitem_unselectable:not(.tokenUsed) {
	cursor: pointer !important;
}

#board_counters {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: flex-start;
	width: 100%;
	position: absolute;
	top: 0px;
	z-index: 1;
}

.counter {
	color: white;
	font-weight: bold;
	display: flex !important;
	justify-content: center;
	align-items: center;
	font-size: small;
}

/* Compact mode only in desktop */
@media only screen and (min-width: 970px) {
	.seasons_compact_player_board .leftPlayerBoard .bonus-progress,
	.seasons_compact_player_board .leftPlayerBoard .playerdie_wrap,
	.seasons_compact_player_board .leftPlayerBoard .energywrapper {
		display: none;
	}
	.seasons_compact_player_board .leftPlayerBoard .ssn-avatar {
		width: 45px;
		height: 45px;
	}
	.seasons_compact_player_board .leftPlayerBoard .bonus1,
	.seasons_compact_player_board .leftPlayerBoard .bonus2,
	.seasons_compact_player_board .leftPlayerBoard .bonus3,
	.seasons_compact_player_board .leftPlayerBoard .bonus4,
	.seasons_compact_player_board .leftPlayerBoard .age {
		width: 28px;
		height: 40px;
	}

	.seasons_compact_player_board .age {
		width: 35px;
		height: 35px;
	}

	.seasons_compact_player_board .ages {
		left: 19px;
	}

	.seasons_compact_player_board .counter {
		font-size: small;
	}
}
.conversion_reminder .counter {
	color: black;
	-webkit-text-stroke: 1px #fff;
	font-size: x-large;
}

.ages {
	position: absolute;
	bottom: -45px;
	left: 5px;
	display: flex;
	column-gap: 6px;
	justify-content: center;
}
.age {
	width: 55px;
	height: 55px;
	cursor: pointer;
}

.tableau {
	position: relative;
	display: grid;
	grid-template-columns: max-content auto;
	column-gap: 18px;

	margin-bottom: 5px;
	background-color: #ccae99;
	background-clip: padding-box;
	border: solid;
	border-width: 64px 37px;
	border-image-source: url("img/parchmentFrame.png");
	border-image-slice: 150 80;
	border-image-repeat: round;
	/*padding: 0px 10px;*/
}
.stock-wrapper {
	display: grid;
}

.stock-wrapper div {
	grid-column: 1;
	grid-row: 1;
}

/* card */

.cardtitle {
	position: absolute;
	top: 6px;
	left: 23px;
	font-weight: bold;
	font-size: 50%;
	width: 80px;
	text-align: center;
}
.cardtooltip .cardtitle {
	font-size: 100%;
	width: 82%;
	top: 4.2%;
}

.cardtooltip {
	text-align: center;
	max-width: 300px;
}
.dietooltip {
	max-width: 300px;
}
.possibleCard {
	border-radius: 8px;
	border: solid 2px #e9b415;
	cursor: default;
}

/* no zoom on dice because they get blury */
:not(#seasons_dices) > .stockitem:hover {
	transform: scale(1.05);
	z-index: 150 !important;
}

.all_die_faces {
}
.all_die_face {
	background-image: url("img/dices.png");
	width: 54px;
	height: 54px;
	margin: 5px;
	display: inline-block;
}

/* Activation possible */
.tableau .cardactivation {
	position: absolute;
	left: 42px;
	bottom: 12px;
	background-image: url("img/icons2022.png");
	background-position: 0 27.892405%;
	background-size: 138.888889%;
	width: 40px;
	height: 40px;
}
/* Activated */
.tableau .activated .cardactivation {
	background-image: url("img/icons.png");
	background-position: -150px 0px;
	background-size: auto;
}

.tableau .activated {
	filter: brightness(50%);
	-webkit-filter: brightness(50%); /* Chrome, Safari, Opera */
}

.show-player-tableau a,
.anchor-up a {
	color: #000;
}

.show-player-tableau {
	height: 40px;
	width: 25px;
	grid-column: 2 !important;
	z-index: 1;
	justify-self: end;
}

.anchor-up {
	height: 25px;
	width: 25px;
	position: absolute;
	right: 35px;
	margin-top: -40px;
}

.show-player-tableau svg,
.anchor-up svg {
	height: 100%;
	width: auto;
}

.cardenergies {
	position: absolute;
	left: 10px;
	top: 20px;
	width: 100px;
	height: 100px;
}
.cardartwrap {
}
.cardart {
	display: inline-block;
	background-image: url("img/cards.jpg");
	width: 248px;
	height: 346px;
	margin: 10px;
	background-size: 1000%;
}

.seasonsclearblock {
	padding: 0px 10px;
}
.seasonsblock {
	text-align: center;
	margin-top: 8px;
	padding: 3px;
}

.seasonsblock > div {
	background-color: rgb(12 12 12 / 43%);
	border-radius: 10px;
	/*padding: 10px 5px 10px 5px;myhand*/
	padding: 7px 4px 2px 4px;
	justify-content: space-between;
}

.seasonsblock h3 {
	color: white;
	box-shadow: inset 1px 1px 4px -2px #303838;
	background-color: rgb(12 12 12 / 43%);
	border-radius: 8px 8px 0px 0px;
	padding: 4px 10px 0px 10px;
	margin: 0px;
	display: inline;
}
#player_hand {
	min-height: 173px;
	padding-bottom: 8px;
}

#myhand {
	text-align: center;
	margin-right: 10px; /*because of the right scrolling button*/
}

.ssn-loc-available:before {
	content: " ";
	position: absolute;
	z-index: 0;
	top: 0px;
	left: 0px;
	right: 0px;
	bottom: 0px;
	border: 2px solid white;
	margin: -5px;
	border-radius: 13px;
	/*background-color: rgba(38,18,9,0.15);*/
	background: url("img/slotAvailable.png") no-repeat center;
}
/* ... */

